fix: task assignment
