# tasklist/tasklist-backend/src/main/api/openapi.yml
@@ -309,23 +309,6 @@ paths:
               schema:
                 $ref: "#/components/schemas/PageOfTasks"
 
-  /user/id/{userId}:
-    parameters:
-      - $ref: '#/components/parameters/UserIdParam'
-    get:
-      description: Resolves a user by id.
-      operationId: resolveUser
-      tags:
-        - User
-      responses:
-        200:
-          description: Successful operation.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/UserProfile"
-
-
 components:
 
   securitySchemes:
@@ -716,28 +699,6 @@ components:
       type: object
       additionalProperties:
         type: object
-
-    UserProfile:
-      description: Profile of the user.
-      type: object
-      properties:
-        userId:
-          description: Unique user id.
-          type: string
-        firstName:
-          description: First name.
-          type: string
-        lastName:
-          description: Last name.
-          type: string
-        primaryOrgUnit:
-          description: Primary organizational unit.
-          type: string
-      required:
-        - userId
-        - firstName
-        - lastName
-        - primaryOrgUnit
 
     ListOfFilenames:
       description: List of filenames.
